docs: 更新文档中的测试网站链接

--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,8 @@
 • AI生成的有点拉但是能用。
 
 GitHub：http://github.com/IIIStudio/MSTTS
-CNB:https://cnb.cool/IIIStudio/HTML/MSTTS
+CNB：https://cnb.cool/IIIStudio/HTML/MSTTS
+测试网站：https://iiistudio.github.io/MSTTS/
 
 请上传您的文本文件开始体验吧！`;
 
